# secure-observable-go-backend-starter-kit

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  Taskfile.yaml  WORKSPACE.bazel  docker-compose.yml  go.mod  go.sum
.agent-cache/: final-report.md  mission-plan.md  run-log.md  validation-matrix.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  k8s-kind-smoke.yml
api/: everything-backend-starter-kit.rest  openapi.yaml
api/rest-client/: 00-quickstart.rest  01-auth.rest  02-user-me-sessions-avatar.rest  03-products.rest  04-feature-flags.rest  05-admin-rbac.rest  README.md
cmd/api/: BUILD.bazel  README.md  main.go
cmd/loadgen/: BUILD.bazel  README.md  main.go
cmd/migrate/: BUILD.bazel  README.md  main.go
cmd/obscheck/: BUILD.bazel  README.md  main.go
cmd/seed/: BUILD.bazel  README.md  main.go
configs/: mimir.yaml  otel-collector-config.yaml
docs/: audit-taxonomy.md  diagrams.md  grafana-jsonnet-cutover-plan.md  k8s-adoption-plan.md  metrics-catalog.md  project-guide.md  test-catalog.md  test-gaps.md  test_catalog.md
docs/diagrams/: admin-list-query-flow.mmd  admin-list-singleflight-flow.mmd  api-rate-limiter-key-flow.mmd  architecture.mmd  auth-flow.mmd  ci-flow.mmd  forgot-rate-limiter-flow.mmd  idempotency-flow.mmd  k8s-overlay-topology.mmd  k8s-runtime-rollout-smoke-flow.mmd  observability-flow.mmd  password-reset-flow.mmd  problem-details-flow.mmd  rollout-promotion-gate-decision.mmd  route-rate-limit-policy-map-flow.mmd  tooling-flow.mmd
internal/app/: BUILD.bazel  app.go
internal/config/: BUILD.bazel  config.go  config_profile_test.go
internal/database/: BUILD.bazel  migrate.go  postgres.go  seed.go
internal/di/: BUILD.bazel  providers.go  providers_test.go  wire.go  wire_gen.go
internal/domain/: BUILD.bazel  local_credential.go  product.go  user.go
internal/health/: BUILD.bazel  checker.go  checker_test.go  dependency.go  mock_checker_test.go
internal/health/gomock/: BUILD.bazel  mock_checker.go
internal/http/handler/: BUILD.bazel  admin_handler.go  admin_handler_test.go  auth_handler.go  auth_handler_test.go  feature_flag_handler_test.go  product_handler.go  product_handler_test.go  user_handler.go  user_handler_test.go
internal/http/middleware/: BUILD.bazel  auth_middleware.go  bypass_policy_test.go  idempotency_middleware.go  idempotency_middleware_test.go  mock_rate_limit_middleware_test.go  rate_limit_middleware.go  rate_limit_middleware_test.go  rate_limit_redis.go  rate_limit_redis_test.go  rbac_middleware.go  rbac_middleware_test.go  request_logging_middleware.go  request_logging_middleware_test.go  security_middleware.go  security_middleware_test.go
internal/http/middleware/gomock/: BUILD.bazel  mock_rate_limit_middleware.go
internal/http/response/: BUILD.bazel
internal/http/router/: BUILD.bazel  router.go
internal/observability/: BUILD.bazel  audit.go  audit_test.go  logging.go  metrics.go  metrics_test.go  redis_metrics.go  runtime.go  tracing.go
internal/repository/: BUILD.bazel  local_credential_repository.go  oauth_repository.go  pagination.go  permission_repository.go  product_repository.go  product_repository_test.go  role_repository.go  session_repository.go  user_repository.go  verification_token_repository.go
internal/repository/gomock/: BUILD.bazel  mock_feature_flag_repository.go  mock_local_credential_repository.go  mock_oauth_repository.go  mock_permission_repository.go  mock_product_repository.go  mock_role_repository.go  mock_session_repository.go  mock_user_repository.go  mock_verification_token_repository.go
internal/security/: BUILD.bazel  cookie_test.go  password.go  password_test.go
internal/service/: BUILD.bazel  admin_list_cache.go  admin_list_cache_redis.go  admin_list_cache_test.go  auth_abuse_guard.go  auth_abuse_guard_redis.go  auth_abuse_guard_test.go  auth_password_policy_test.go  auth_service.go  auth_service_test.go  email_verification_notifier.go  feature_flag_service.go  feature_flag_service_test.go  idempotency_store_db.go  interfaces.go  mock_email_verification_notifier_test.go  mock_interfaces_test.go  mock_oauth_provider_test.go  oauth_service.go  oauth_service_test.go  product_service.go  product_service_test.go  rbac_permission_resolver.go  rbac_permission_resolver_test.go  rbac_service.go  rbac_service_test.go  session_service_test.go  storage_service.go  token_service.go  user_service.go  user_service_test.go
internal/service/gomock/: BUILD.bazel  mock_admin_list_cache.go  mock_auth_abuse_guard.go  mock_email_verification_notifier.go  mock_feature_flag_cache_store.go  mock_idempotency_store.go  mock_interfaces.go  mock_negative_lookup_cache.go  mock_oauth_service.go  mock_rbac_permission_cache_store.go  mock_storage_service.go
internal/tools/common/: BUILD.bazel  env.go  (+1 more)
internal/tools/loadgen/: BUILD.bazel  command.go  run.go
internal/tools/migrate/: BUILD.bazel  command.go
internal/tools/obscheck/: BUILD.bazel  command.go
internal/tools/seed/: BUILD.bazel  command.go
internal/tools/ui/: BUILD.bazel  run.go
internal/validator/: BUILD.bazel  validator.go
k8s/: README.md  kind-config-simple.yaml
k8s/base/: kustomization.yaml
k8s/scripts/: cleanup.sh  deploy.sh  health-check.sh  kind-setup.sh  obs-alert-check.sh  setup-secrets.sh  status.sh
pkg/validator/: BUILD.bazel
policy/k8s/: availability.rego  workload.rego
scripts/ci/: run_all.sh  run_fuzz_long.sh  run_fuzz_smoke.sh  run_k8s_availability_validate.sh  run_k8s_manifest_validate.sh  run_k8s_policy_check.sh  run_k8s_rollout_runtime_kind.sh  run_mockgen_check.sh
taskfiles/: app.yaml  ci.yaml  go.yaml  k8s.yaml  security.yaml
test/integration/: BUILD.bazel  admin_list_cache_test.go  admin_list_pagination_test.go  admin_rbac_write_test.go  audit_taxonomy_test.go  auth_abuse_test.go  auth_lifecycle_test.go  auth_middleware_test.go  avatar_storage_test.go  email_verification_test.go  minio_testcontainer_helper.go  password_reset_test.go  rate_limit_test.go  rbac_forbidden_test.go
(+27 files in other folders)
