load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "loadgen_lib",
    srcs = ["main.go"],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/cmd/loadgen",
    visibility = ["//visibility:private"],
    deps = ["//internal/tools/loadgen"],
)

go_binary(
    name = "loadgen",
    embed = [":loadgen_lib"],
    visibility = ["//visibility:public"],
)
