load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrate_lib",
    srcs = ["main.go"],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/cmd/migrate",
    visibility = ["//visibility:private"],
    deps = ["//internal/tools/migrate"],
)

go_binary(
    name = "migrate",
    embed = [":migrate_lib"],
    visibility = ["//visibility:public"],
)
