load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/app",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/health",
        "//internal/observability",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_gorm//:gorm",
    ],
)
