load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "migrate.go",
        "postgres.go",
        "seed.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "//internal/observability",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
