load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "di",
    srcs = [
        "providers.go",
        "wire_gen.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/di",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/app",
        "//internal/config",
        "//internal/database",
        "//internal/http/handler",
        "//internal/http/middleware",
        "//internal/http/router",
        "//internal/observability",
        "//internal/repository",
        "//internal/security",
        "//internal/service",
        "@com_github_google_wire//:wire",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_gorm//:gorm",
    ],
)

go_test(
    name = "di_test",
    srcs = ["providers_test.go"],
    embed = [":di"],
    deps = [
        "//internal/config",
        "//internal/http/router",
        "//internal/observability",
    ],
)
