load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "oauth_account.go",
        "permission.go",
        "role.go",
        "session.go",
        "user.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/domain",
    visibility = ["//:__subpackages__"],
)
