load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "feature_flag.go",
        "idempotency_record.go",
        "local_credential.go",
        "oauth_account.go",
        "permission.go",
        "product.go",
        "role.go",
        "session.go",
        "user.go",
        "verification_token.go",
    ],
    importpath = "github.com/sandeepkv93/everything-backend-starter-kit/internal/domain",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "domain_test",
    srcs = ["models_test.go"],
    embed = [":domain"],
)
