load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = [
        "audit.go",
        "logging.go",
        "metrics.go",
        "runtime.go",
        "tracing.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/observability",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_go_chi_chi_v5//middleware",
        "@io_opentelemetry_go_contrib_bridges_otelslog//:otelslog",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc//:otlploggrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc//:otlpmetricgrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_log//:log",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//exemplar",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
