load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = [
        "local_credential_repository.go",
        "oauth_repository.go",
        "pagination.go",
        "permission_repository.go",
        "role_repository.go",
        "session_repository.go",
        "user_repository.go",
        "verification_token_repository.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/repository",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
    ],
)

go_test(
    name = "repository_test",
    srcs = ["session_repository_test.go"],
    embed = [":repository"],
    deps = [
        "//internal/domain",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
