load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = [
        "feature_flag_repository.go",
        "local_credential_repository.go",
        "oauth_repository.go",
        "pagination.go",
        "permission_repository.go",
        "product_repository.go",
        "role_repository.go",
        "session_repository.go",
        "user_repository.go",
        "verification_token_repository.go",
    ],
    importpath = "github.com/sandeepkv93/everything-backend-starter-kit/internal/repository",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain",
        "//internal/observability",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
    ],
)

go_test(
    name = "repository_test",
    srcs = [
        "local_credential_repository_test.go",
        "oauth_repository_test.go",
        "pagination_test.go",
        "permission_repository_test.go",
        "product_repository_test.go",
        "repository_test_helpers_test.go",
        "role_repository_test.go",
        "session_repository_test.go",
        "user_repository_test.go",
        "verification_token_repository_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":repository"],
    deps = [
        "//internal/domain",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
