load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "security",
    srcs = [
        "cookie.go",
        "hash.go",
        "jwt.go",
        "password.go",
        "state.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/security",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_google_uuid//:uuid",
        "@org_golang_x_crypto//argon2",
    ],
)

go_test(
    name = "security_test",
    srcs = [
        "jwt_test.go",
        "password_test.go",
        "state_test.go",
    ],
    embed = [":security"],
)
