load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "admin_list_cache.go",
        "admin_list_cache_redis.go",
        "auth_service.go",
        "email_verification_notifier.go",
        "idempotency_store.go",
        "idempotency_store_db.go",
        "idempotency_store_redis.go",
        "interfaces.go",
        "oauth_service.go",
        "rbac_service.go",
        "session_service.go",
        "token_service.go",
        "user_service.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "//internal/repository",
        "//internal/security",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)

go_test(
    name = "service_test",
    srcs = [
        "admin_list_cache_test.go",
        "auth_password_policy_test.go",
        "rbac_service_test.go",
        "token_service_test.go",
    ],
    embed = [":service"],
    deps = [
        "//internal/domain",
        "//internal/repository",
        "//internal/security",
    ],
)
