load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "admin_list_cache.go",
        "admin_list_cache_redis.go",
        "auth_abuse_guard.go",
        "auth_abuse_guard_redis.go",
        "auth_service.go",
        "email_verification_notifier.go",
        "feature_flag_cache_store.go",
        "feature_flag_cache_store_redis.go",
        "feature_flag_service.go",
        "idempotency_store.go",
        "idempotency_store_db.go",
        "idempotency_store_redis.go",
        "interfaces.go",
        "negative_lookup_cache.go",
        "negative_lookup_cache_redis.go",
        "oauth_service.go",
        "product_service.go",
        "rbac_permission_cache_store.go",
        "rbac_permission_cache_store_redis.go",
        "rbac_permission_resolver.go",
        "rbac_service.go",
        "session_service.go",
        "storage_service.go",
        "token_service.go",
        "user_service.go",
    ],
    importpath = "github.com/sandeepkv93/everything-backend-starter-kit/internal/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "//internal/observability",
        "//internal/repository",
        "//internal/security",
        "@com_github_google_uuid//:uuid",
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_minio_minio_go_v7//pkg/credentials",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
        "@org_golang_x_sync//singleflight",
    ],
)

go_test(
    name = "service_test",
    srcs = [
        "admin_list_cache_redis_test.go",
        "admin_list_cache_test.go",
        "auth_abuse_guard_redis_test.go",
        "auth_abuse_guard_test.go",
        "auth_password_policy_test.go",
        "auth_service_test.go",
        "feature_flag_service_test.go",
        "idempotency_store_db_test.go",
        "idempotency_store_redis_test.go",
        "negative_lookup_cache_redis_test.go",
        "negative_lookup_cache_test.go",
        "oauth_service_test.go",
        "product_service_test.go",
        "rbac_permission_cache_store_redis_test.go",
        "rbac_permission_resolver_test.go",
        "rbac_service_test.go",
        "redis_test_helpers_test.go",
        "session_service_test.go",
        "storage_service_test.go",
        "token_service_test.go",
        "user_service_test.go",
    ],
    embed = [":service"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "//internal/repository",
        "//internal/security",
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
