load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = [
        "admin_list_cache_test.go",
        "admin_list_pagination_test.go",
        "admin_rbac_mutation_matrix_test.go",
        "admin_rbac_write_test.go",
        "avatar_storage_test.go",
        "audit_taxonomy_test.go",
        "auth_abuse_test.go",
        "auth_google_oauth_test.go",
        "auth_lifecycle_test.go",
        "auth_middleware_test.go",
        "email_verification_test.go",
        "health_endpoints_test.go",
        "idempotency_test.go",
        "minio_testcontainer_helper.go",
        "password_reset_test.go",
        "problem_details_test.go",
        "rate_limit_test.go",
        "rbac_forbidden_test.go",
        "rbac_permission_cache_test.go",
        "redis_race_integration_test.go",
        "session_management_test.go",
    ],
    deps = [
        "//internal/config",
        "//internal/database",
        "//internal/domain",
        "//internal/http/handler",
        "//internal/http/middleware",
        "//internal/http/router",
        "//internal/repository",
        "//internal/security",
        "//internal/service",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_minio_minio_go_v7//pkg/credentials",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
