load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "admin_handler.go",
        "auth_handler.go",
        "feature_flag_handler.go",
        "product_handler.go",
        "user_handler.go",
    ],
    importpath = "github.com/sandeepkv93/everything-backend-starter-kit/internal/http/handler",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/database",
        "//internal/domain",
        "//internal/http/middleware",
        "//internal/http/response",
        "//internal/observability",
        "//internal/repository",
        "//internal/security",
        "//internal/service",
        "@com_github_go_chi_chi_v5//:chi",
        "@io_gorm_gorm//:gorm",
        "@org_golang_x_sync//singleflight",
    ],
)

go_test(
    name = "handler_test",
    srcs = [
        "admin_handler_test.go",
        "auth_handler_test.go",
        "feature_flag_handler_test.go",
        "product_handler_test.go",
        "user_handler_test.go",
    ],
    embed = [":handler"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "//internal/http/middleware",
        "//internal/repository",
        "//internal/security",
        "//internal/service",
        "@com_github_go_chi_chi_v5//:chi",
        "@io_gorm_gorm//:gorm",
    ],
)
