load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "auth_middleware.go",
        "bypass_policy.go",
        "idempotency_middleware.go",
        "rate_limit_middleware.go",
        "rate_limit_redis.go",
        "rbac_middleware.go",
        "request_logging_middleware.go",
        "security_middleware.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/http/middleware",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/http/response",
        "//internal/observability",
        "//internal/security",
        "//internal/service",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)

go_test(
    name = "middleware_test",
    srcs = [
        "auth_middleware_test.go",
        "idempotency_middleware_test.go",
        "rate_limit_middleware_test.go",
        "rbac_middleware_test.go",
        "security_middleware_test.go",
    ],
    embed = [":middleware"],
    deps = ["//internal/security"],
)
