load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = ["run.go"],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/tools/ui",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)
